@@ -2366,13 +2366,13 @@ static int user_tick_function_compare(user_tick_function_entry * tick_fe1, user_
 
 void php_call_shutdown_functions(TSRMLS_D)
 {
-	if (BG(user_shutdown_function_names))
+	if (BG(user_shutdown_function_names)) {
 		zend_try {
 			zend_hash_apply(BG(user_shutdown_function_names), (apply_func_t) user_shutdown_function_call TSRMLS_CC);
-			memcpy(&EG(bailout), &orig_bailout, sizeof(jmp_buf));
-			php_free_shutdown_functions(TSRMLS_C);
 		}
 		zend_end_try();
+		php_free_shutdown_functions(TSRMLS_C);
+	}
 }
 
 void php_free_shutdown_functions(TSRMLS_D)
